\name{NEWS}
\title{NEWS file for the gridSVG package}
\encoding{UTF-8}

\section{Changes in version 1.4-2}{
  \itemize{
    \item Fixed export of clip grob (reported by Matthew Plourde).
    \item Fixed support for primitiveUnits="bbox" in filterEffect().
  }
}
\section{Changes in version 1.4-1}{
  \itemize{
    \item Fixed raster export so that original raster is never
    exported at a resolution LOWER than its native resolution.
    
    \item Added forceGrob() methods so that animations, garnishing,
    hyperlinks, etc are retained if a grob is forced.
    
    \item Fix for export of downViewport(path) when the depth of the
    resulting navigation is greater than depth(path).

    The visible manifestation of this bug was that <g> elements were
    generated with an incorrect (too long/wrong depth) 'id' attribute.
  }
}
\section{Changes in version 1.4-0}{
  \itemize{
    \item Bumped R version requirement to R >= 3.1.0 because this
    version of gridSVG depends on some new exports from 'grid'

    \item Removed all nasty peeks into grid namespace (hence
    dependence on R 3.1.0).

    \item Tweaks to tests/ to make it easier to do QC checks.
  }
}

\section{Changes in version 1.3-0}{
  \itemize{
    \item Added support for rotated viewports
    (previously, rectangles, text, rasters, and clipping rects
    did not export properly, if drawn within a rotated viewport)

    Includes changes to rendering, animation, and coordinate system
    export and conversion.

    \item Fixed bug in viewportConvertWidth() and
    viewportConvertHeight() when converting from "native".

    \item Bug fix for positioning grobs with dimensions when a
    viewport's x-scale or y-scale is "flipped". (Simon)

    \item Reposition <defs> so that definitions are always available
    when used. Allows renderers like librsvg to render gridSVG images
    correctly. For consistency, pch definitions are also pushed into the
    same <defs> element. (Simon)
