@@ -5,7 +5,12 @@
 \section{Changes in version 1.4-2}{
   \itemize{
     \item Fixed export of clip grob (reported by Matthew Plourde).
+    
     \item Fixed support for primitiveUnits="bbox" in filterEffect().
+
+    \item Fix memory initialisation problem in base64 C code.
+
+    Reported in valgrind testing by Brian Ripley.
   }
 }
 \section{Changes in version 1.4-1}{
